<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/listaColab_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/listaColab_topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/colorPrimary"
            app:menu="@menu/toolbar_mytire"
            app:navigationIcon="@drawable/arrow_back_black_24dp"
            app:title="@string/dados_cadastrados" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/txtNuvemAtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/atualizado_na_nuvem"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaColab_appBarLayout" />

    <TextView
        android:id="@+id/txtEmpresaColaborador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/minha_empresa"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtNuvemAtt"
        app:layout_constraintTop_toBottomOf="@+id/txtNuvemAtt" />

    <TextView
        android:id="@+id/txtCargoColaborador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/cargo"
        android:textColor="#DE000000"
        app:layout_constraintStart_toStartOf="@+id/txtEmpresaColaborador"
        app:layout_constraintTop_toBottomOf="@+id/txtEmpresaColaborador" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="#DE000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txtCargoColaborador"
        app:layout_constraintTop_toBottomOf="@+id/txtCargoColaborador" />

    <TextView
        android:id="@+id/txtEmailColaborador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <View
        android:id="@+id/divider15"
        android:layout_width="358dp"
        android:layout_height="1dp"
        android:layout_marginTop="13dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="@+id/txtEmailColaborador"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailColaborador" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/usuario_nome"
        android:textColor="#DE000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/divider15"
        app:layout_constraintTop_toBottomOf="@+id/divider15" />

    <TextView
        android:id="@+id/txtNomeColaborador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/usuario_nome"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <View
        android:id="@+id/divider16"
        android:layout_width="358dp"
        android:layout_height="1dp"
        android:layout_marginTop="13dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="@+id/txtNomeColaborador"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeColaborador" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/usuario_sobrenome"
        android:textColor="#DE000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/divider16"
        app:layout_constraintTop_toBottomOf="@+id/divider16" />

    <TextView
        android:id="@+id/txtSobrenomeColaborador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/usuario_sobrenome"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <View
        android:id="@+id/divider17"
        android:layout_width="358dp"
        android:layout_height="1dp"
        android:layout_marginTop="13dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="@+id/txtSobrenomeColaborador"
        app:layout_constraintTop_toBottomOf="@+id/txtSobrenomeColaborador" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/telefone"
        android:textColor="#DE000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/divider17"
        app:layout_constraintTop_toBottomOf="@+id/divider17" />

    <TextView
        android:id="@+id/txtTelefoneColaborador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/telefone"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <View
        android:id="@+id/divider18"
        android:layout_width="358dp"
        android:layout_height="1dp"
        android:layout_marginTop="13dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="@+id/txtTelefoneColaborador"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefoneColaborador" />

    <Button
        android:id="@+id/btDeletarConta"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/deletar_conta"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="0.8sp" />

</androidx.constraintlayout.widget.ConstraintLayout>